--- a/delicious/src/main/resources/static/css/style_login.css
+++ b/delicious/src/main/resources/static/css/style_login.css
@@ -15,7 +15,7 @@
 .clearfix{*zoom:1;}
 /* IE6 7专用 */
 body{
-    background-color: #8FACFF;
+    background-color: #7E91CB;
 }
 .first{
     height: 490px;
